--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ footer{
     .Contactinfo{
         position: relative;
        margin: 0 20%;
+
     }
 }
 @media all and (min-width:768px) and (max-width:1019px){
@@ -122,6 +123,7 @@ footer{
     .Contactinfo{
         position: relative;
         margin: 0 20%;
+        list-style:none;
     }
     .sociallink a{
         position: relative;
