--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ footer{
     .locationinfo{
         max-width: 30%;
     }
-    .Contactinfo{
+    .ContactInfo{
         margin:auto;
         display: flex;
     }
